--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -108,7 +108,7 @@ cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/DD-D1/Script/m
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/RUNSTEP/cash.js, enabled=true, tag=走路赚钱-提现专用
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_priceProtect.js, enabled=true, tag=京东价格保护
 cron "55 20 */3 * * *" script-path=https://gitee.com/curtinlv/qx/raw/master/Script/zmsp.js, enabled=true, tag=芝嫲视频
-cron "10 10,11 * * 2-5" script-path=https://github.com/i-chenzhe/qx/raw/main/jd_entertainment.js, enabled=true, tag=百变大咖秀
+cron "10 10,11 * * 2-5" script-path=https://github.com/i-chenzhe/qx/raw/main/jd_entertainment.js, enabled=true, tag=⚠️百变大咖秀
 cron "36 0 8,12,13,14,18,19,20,21,22,23 * * *" script-path=https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dxbox.js, enabled=true, tag=整点开宝箱
 cron "30 7-23 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/baidu_speed.js, enabled=true, tag=百度极速版
 cron "35 5 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js, enabled=true, tag=快手极速版
@@ -129,13 +129,13 @@ cron "0 10 0 * * ?" script-path=https://raw.githubusercontent.com/lowking/Script
 cron "0 9 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/ZIYE/Task/flw.js, enabled=true, tag=返利网
 cron "0,30 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/ZIYE/Task/步步宝.js, enabled=true, tag=步步宝
 cron "0,30 0-12 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/yike.js, enabled=true, tag=一刻视频
-cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_fanslove.js, enabled=true, tag=粉丝互动,
+cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_fanslove.js, enabled=true, tag=⚠️粉丝互动,
 cron "0 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_xxl.js, enabled=true, tag=东东爱消除
 cron "0 9,12,18 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_jxnc.js, enabled=true, tag=京喜农场
 cron "10 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_ms.js, enabled=true, tag=京东秒秒币
 cron "0 10 0 * * *" script-path=https://raw.githubusercontent.com/XidNDD/2020scripts/master/jddsSign.js, enabled=true, tag=京东读书签到
 cron "5 8 * * *" script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js, enabled=true, tag= 京东特权值
-cron "1 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_wechat_sign.js, enabled=true, tag=京东粉丝专享
+cron "1 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_wechat_sign.js, enabled=true, tag=⚠️京东粉丝专享
 cron "30 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_gyec.js, enabled=true, tag=工业品爱消除
 cron "0 30 2 1,10,20 * ?" script-path=https://gitee.com/qq34347476/quantumult-x/raw/master/get_share_jd_code.js, enabled=true, tag=获取并提交hz码
 cron "1 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_family.js, enabled=true, tag=京东家庭号
