--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "35 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zzsy.js, enabled=true, tag=招招试药
+cron "0 7 * * *" script-path=https://raw.githubusercontent.com/sngxpro/scripts/main/snjc/snjc.js, enabled=true, tag=酸奶机场签到
 cron "7 7 7-20 * * *" script-path=https://cdn.js, enabled=true, tag=易趣牛帮
 cron "35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qhyd.js, enabled=true, tag=千禾阅读
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/blnc.js, enabled=true, tag=部落农场
