--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "35 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zzsy.js, enabled=true, tag=招招试药
 cron "7 7 7-20 * * *" script-path=https://raw.githubusercontent.com/ziye888/JavaScript/main/Task/yqnb.js, enabled=true, tag=易趣牛帮
 cron "35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qhyd.js, enabled=true, tag=千禾阅读
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/blnc.js, enabled=true, tag=部落农场
