--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -3,6 +3,23 @@
 
 cron "35 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zzsy.js, enabled=true, tag=招招试药
 cron "0 7 * * *" script-path=https://raw.githubusercontent.com/sngxpro/scripts/main/snjc/snjc.js, enabled=true, tag=酸奶机场签到
+cron "15 08 5-30 4 *" script-path=https://share.r2ray.com/dust/member/monk_vinda.js, enabled=true, tag=京东维达品牌日
+cron "0 0 * * *" script-path=https://share.r2ray.com/dust/normal/monk_inter_shop_sign.js, enabled=true, tag=interCenter渠道店铺签到
+cron "35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qhyd.js, enabled=true, tag=千禾阅读
+cron "3 0,10,23 * * *" script-path=https://share.r2ray.com/dust/normal/monk_shop_lottery.js, enabled=true, tag=京东店铺大转盘
+cron "15 15 * * *" script-path=https://share.r2ray.com/dust/normal/monk_shop_follow_sku.js, enabled=true, tag=京东关注有礼
+cron "15 12 * * *" script-path=https://share.r2ray.com/dust/car/monk_shop_add_to_car.js, enabled=true, tag=京东加购有礼
+cron "0 0,1-22/2 1-31 4-7 *" script-path=https://share.r2ray.com/dust/member/monk_pasture.js, enabled=true, tag=京东有机牧场
+cron "10 10 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_xmf.js, enabled=true, tag=京东小魔方
+cron "5 8,14,20 6-13 4 *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_mother_jump.js, enabled=true, tag=京东母婴-跳一跳二期
+cron "3 10 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_fanslove.js, enabled=true, tag=京东粉丝互动
+cron "10 10,11 * * 2-5" script-path=https://share.r2ray.com/dust/i-chenzhe/z_entertainment.js, enabled=true, tag=京东百变大咖秀
+cron "0 0-18/6 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_carnivalcity.js, enabled=true, tag=京东手机狂欢城
+cron "3 10 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_marketLottery.js, enabled=true, tag=京东超市-大转盘
+cron "5 1,6,11,16,21 * 3-4 *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_super5g.js, enabled=true, tag=京东5G超级盲盒
+cron "3 20 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_shake.js, enabled=true, tag=京东chenzhe摇一摇
+cron "15 08 2-18 4 *" script-path=https://raw.githubusercontent.com/sngxpro2/self/main/delete/gone/monk_skyworth.js, enabled=true, tag=京东创维全勤奖(不加购)
+cron "15 08 2-18 4 *" script-path=https://share.r2ray.com/dust/car/monk_skyworth_car.js, enabled=true, tag=京东创维全勤奖(加购)
 cron "7 7 7-20 * * *" script-path=https://cdn.js, enabled=true, tag=易趣牛帮
 cron "35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qhyd.js, enabled=true, tag=千禾阅读
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/blnc.js, enabled=true, tag=部落农场
@@ -27,14 +44,6 @@ cron "10 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zq
 cron "10-15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lgyy.js, enabled=true, tag=朗果英语
 cron "20 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ximei.js, enabled=true, tag=西梅
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/58/58.js, enabled=true, tag=58同城(查看脚本学用法)
-cron "3 10 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_marketLottery.js, enabled=true, tag=京东超市-大转盘
-cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_grassy.js, enabled=true, tag=京东答题赢京豆
-cron "12 12 24-26 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_sister.js, enabled=true, tag=京东乘风破浪的姐姐
-cron "12 15 15-29 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_lenovo.js, enabled=true, tag=京东联想集卡活动
-cron "5 1,6,11,16,21 * 3-4 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_super5g.js, enabled=true, tag=京东5G超级盲盒
-cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_oneplus.js, enabled=true, tag=京东一加盲盒
-cron "15 10 10-31 3 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/z_unionPoster.js, enabled=true, tag=京东美的家电节
-cron "3 20 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/i-chenzhe/jd_shake.js, enabled=true, tag=摇一摇
 cron "0 8 22-29 3 *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/cart.js, enabled=true, tag=京东奇瑞新能源抽奖
 cron "7 0-23 * * *" script-path=https://cdn.js, enabled=true, tag=书旗小说ziye版
 cron "0 10,16,22 * * *" script-path=https://cdn.js, enabled=true, tag=返利网
