--- a/.github/workflows/睡眠赚.yml
+++ b/.github/workflows/睡眠赚.yml
@@ -1,12 +1,12 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 睡眠赚1
+name: 睡眠赚
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '10 */6 * * *'
+    - cron: '0,30 * * * *'
 
 jobs:
   build:
@@ -30,3 +30,9 @@ jobs:
         env:
           TZ: Asia/shanghai
 
+
+      - name: '运行 【睡眠赚2】'
+        run: |
+          node ./workflow/feizao/smz2.js
+        env:
+          TZ: Asia/shanghai
