--- a/.github/workflows/睡眠赚2.yml
+++ b/.github/workflows/睡眠赚2.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 睡眠赚
+name: 睡眠赚2
 
 on:
   workflow_dispatch:
@@ -22,13 +22,6 @@ jobs:
       - name: npm install
         run: |
           npm install
-
-
-      - name: '运行 【睡眠赚1】'
-        run: |
-          node ./workflow/feizao/smz1.js
-        env:
-          TZ: Asia/shanghai
 
 
       - name: '运行 【睡眠赚2】'
