--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,9 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 0 0/4 * * ?" script-path=https://raw.githubusercontent.com/xl2101200/-/main/zb.js, enabled=true, tag=左边
+cron "1 7,12,19 * * *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jd_beauty.js, enabled=true, tag=京东美丽研究院
+cron "20 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/jjrm.js, enabled=true, tag=久金人脉
 cron "35 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zzsy.js, enabled=true, tag=招招试药
 cron "0 7 * * *" script-path=https://raw.githubusercontent.com/sngxpro/scripts/main/snjc/snjc.js, enabled=true, tag=酸奶机场签到
 cron "15 08 5-30 4 *" script-path=https://share.r2ray.com/dust/member/monk_vinda.js, enabled=true, tag=京东维达品牌日
