--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, enabled=true, tag=京东整点京豆红包雨
 cron "0 0 0/4 * * ?" script-path=https://raw.githubusercontent.com/xl2101200/-/main/zb.js, enabled=true, tag=左边
 cron "1 7,12,19 * * *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jd_beauty.js, enabled=true, tag=京东美丽研究院
 cron "20 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/jjrm.js, enabled=true, tag=久金人脉
@@ -31,8 +32,6 @@ cron "0 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ehy
 cron "0 0/30 * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/keepjs.js, enabled=true, tag=keep小程序浇水
 cron "0 6 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/keepdk.js, enabled=true, tag=keep小程序打卡偷能量
 cron "0-59 9,12,22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/shq.js, enabled=true, tag=生活圈
-cron "1 0,9,11,13,15,17,19,20,21,23 * 4-6 *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/backup/get_red_rain.js, enabled=true, tag=京东自抓直播雨（配合重写每日获取）
-cron "1 8-23 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/jdliveredrain/main/lxk0301_live_redrain.js, enabled=true, tag=京东每日红包雨（由我代管随缘维护）
 cron "0 9,13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/lhws.js, enabled=true, tag=落花无生
 cron "15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/vsh.js, enabled=true, tag=V生活
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/Task/zyb.js, enabled=true, tag=作业帮签到
