--- a/.github/workflows/ziye_书旗小说.yml
+++ b/.github/workflows/ziye_书旗小说.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 简单天气
+name: ziye_书旗小说
 
 on:
   workflow_dispatch:
@@ -28,9 +28,9 @@ jobs:
 
 
 
-      - name: '运行 【简单天气】'
+      - name: '运行 【书旗小说】'
         run: |
-          node ./workflow/ziye/jdtq.js
+          node ./workflow/ziye/shuqi.js
         env:
           TZ: Asia/shanghai
 
