--- a/.github/workflows/sunert_百度极速版.yml
+++ b/.github/workflows/sunert_百度极速版.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 半小时任务
+name: sunert_百度极速版
 
 on:
   workflow_dispatch:
@@ -37,21 +37,6 @@ jobs:
           BAIDU_CASH: ${{ secrets.BAIDU_CASH }}
 
 
-      - name: '运行 【电视家】'
-        run: |
-          node ./workflow/sunert/dianshijia.js
-        env:
-          TZ: Asia/shanghai
-          DSJ_HEADERS: ${{ secrets.DSJ_HEADERS }}
-          DSJ_DRAWAL: ${{ secrets.DSJ_DRAWAL }}
 
-
-#
-#
-#      - name: '运行 【步步宝1】'
-#        run: |
-#          node ./workflow/bbb/BBB2.js
-#        env:
-#          TZ: Asia/shanghai
 
 
