--- a/.github/workflows/ziye_书旗小说.yml
+++ b/.github/workflows/ziye_书旗小说.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: ziye_书旗小说
+name: 书旗小说
 
 on:
   workflow_dispatch:
