--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "35 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tpyqc.js, enabled=true, tag=太平洋汽车网
+cron "10 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/sphz.js, enabled=true, tag=视频号互助
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, enabled=true, tag=京东整点京豆红包雨
 cron "0 0 0/4 * * ?" script-path=https://raw.githubusercontent.com/xl2101200/-/main/zb.js, enabled=true, tag=左边
 cron "1 7,12,19 * * *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jd_beauty.js, enabled=true, tag=京东美丽研究院
