--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,8 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "35 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tpyqc.js, enabled=true, tag=太平洋汽车网
+cron "10 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/sphz.js, enabled=true, tag=视频号互助
 cron "20,50 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/jjrm.js, enabled=true, tag=久金人脉
 cron "35 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zzsy.js, enabled=true, tag=招招试药
 cron "7 7 7-20 * * *" script-path=https://raw.githubusercontent.com/ziye888/JavaScript/main/Task/yqnb.js, enabled=true, tag=易趣牛帮
