--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "25 * * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_health_energy.js, enabled=true, tag=京东健康社区-收能量
+cron "25 10-22/3 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_health_community.js, enabled=true, tag=京东健康社区
 cron "35 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tpyqc.js, enabled=true, tag=太平洋汽车网
 cron "10 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/sphz.js, enabled=true, tag=视频号互助
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, enabled=true, tag=京东整点京豆红包雨
