--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,10 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "10 0-23/4 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health.js, enabled=true, tag=东东健康社区
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xyl.js, enabled=true, tag=新亚链
+cron "0 13 9 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js, enabled=true, tag=京东排行榜
+cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, enabled=true, tag=京东整点京豆红包雨
 cron "35 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tpyqc.js, enabled=true, tag=太平洋汽车网
 cron "10 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/sphz.js, enabled=true, tag=视频号互助
 cron "20,50 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/jjrm.js, enabled=true, tag=久金人脉
