--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -3,6 +3,7 @@
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
 cron "10 0-23/4 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health.js, enabled=true, tag=东东健康社区
+cron "2 9 * * *" script-path=https://raw.githubusercontent.com/jonrean/JD-SHELL/main/monk_pasture.js, enabled=true, tag=有机牧场
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xyl.js, enabled=true, tag=新亚链
 cron "0 13 9 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js, enabled=true, tag=京东排行榜
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, enabled=true, tag=京东整点京豆红包雨
