--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -31,7 +31,7 @@ cron "5 1,6,11,16,21 * 3-4 *" script-path=https://share.r2ray.com/dust/i-chenzhe
 cron "3 20 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_shake.js, enabled=true, tag=京东chenzhe摇一摇
 cron "15 08 2-18 4 *" script-path=https://raw.githubusercontent.com/sngxpro2/self/main/delete/gone/monk_skyworth.js, enabled=true, tag=京东创维全勤奖(不加购)
 cron "15 08 2-18 4 *" script-path=https://share.r2ray.com/dust/car/monk_skyworth_car.js, enabled=true, tag=京东创维全勤奖(加购)
-cron "7 7 7-20 * * *" script-path=https://cdn.js, enabled=true, tag=易趣牛帮
+cron "7 7 7-20 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/yqnb.js, enabled=true, tag=易趣牛帮
 cron "35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qhyd.js, enabled=true, tag=千禾阅读
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/blnc.js, enabled=true, tag=部落农场
 cron "*/4 * * * *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/xsyx.js, enabled=true, tag=兴盛优选小程序
@@ -54,14 +54,14 @@ cron "10-15 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main
 cron "20 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ximei.js, enabled=true, tag=西梅
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/58/58.js, enabled=true, tag=58同城(查看脚本学用法)
 cron "0 8 22-29 3 *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/cart.js, enabled=true, tag=京东奇瑞新能源抽奖
-cron "7 0-23 * * *" script-path=https://cdn.js, enabled=true, tag=书旗小说ziye版
-cron "0 10,16,22 * * *" script-path=https://cdn.js, enabled=true, tag=返利网
-cron "0,30 0-23 * * *" script-path=https://cdn.js, enabled=true, tag=悦动族（查看阅读说明）
-cron "0,30 0-23 * * *" script-path=https://cdn.js, enabled=true, tag=全民悦动(查看脚本下载)
-cron "0,30 0-23 * * *" script-path=https://cdn.js, enabled=true, tag=步步宝ziye版
-cron "0 * * * *" script-path=https://cdn.js, enabled=true, tag=芝嫲视频ziye版(查看脚本有用法)
-cron "0/15 1-6 * * *" script-path=https://cdn.js, enabled=true, tag=小乐优券微信小程序
-cron "*/30 * * * *" script-path=https://cdn.js, enabled=true, tag=笑谱ziye版(查看脚本学用法，请挂全局用方法一)
+cron "7 0-23 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/shuqi.js, enabled=true, tag=书旗小说ziye版
+cron "0 10,16,22 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/flw.js, enabled=true, tag=返利网
+cron "0,30 0-23 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/yuedongzu.js, enabled=true, tag=悦动族（查看阅读说明）
+cron "0,30 0-23 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/qmyd.js, enabled=true, tag=全民悦动(查看脚本下载)
+cron "0,30 0-23 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/bububao.js, enabled=true, tag=步步宝ziye版
+cron "0 * * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/zhima.js, enabled=true, tag=芝嫲视频ziye版(查看脚本有用法)
+cron "0/15 1-6 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/xiaole.js, enabled=true, tag=小乐优券微信小程序
+cron "*/30 * * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/iboxpay.js, enabled=true, tag=笑谱ziye版(查看脚本学用法，请挂全局用方法一)
 cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/jxcollect.js, enabled=true, tag=京东京喜工厂收电力（需单抓ck）
 cron "10 */1 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=sunert中青签到&转盘宝箱&时长
 cron "10 */2 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/Youth_Read.js, enabled=true, tag=sunert中青自动阅读
