--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,12 +1,14 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "4 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_market_lottery.js, enabled=true, tag=京东幸运大转盘0301版
+cron "5-45/20 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health_collect.js, enabled=true, tag=京东健康社区收能量0301版
+cron "25 * * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_health_energy.js, enabled=true, tag=京东健康社区收能量藏经阁版
+cron "10 0-23/4 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health.js, enabled=true, tag=京东健康社区0301版
+cron "25 10-22/3 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_health_community.js, enabled=true, tag=京东健康社区藏经阁版
 cron "0 6 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/smyj.js, enabled=true, tag=圣牧有机
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xyl.js, enabled=true, tag=新亚链
 cron "35 12,18 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xbgg.js, enabled=true, tag=讯播广告
-cron "10 0-23/4 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health.js, enabled=true, tag=京东健康社区0301版
-cron "25 * * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_health_energy.js, enabled=true, tag=京东健康社区-收能量
-cron "25 10-22/3 * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_health_community.js, enabled=true, tag=京东健康社区藏经阁版
 cron "35 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tpyqc.js, enabled=true, tag=太平洋汽车网
 cron "10 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/sphz.js, enabled=true, tag=视频号互助
 cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, enabled=true, tag=京东整点京豆红包雨
