--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,8 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "4 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_market_lottery.js, enabled=true, tag=幸运大转盘
+cron "5-45/20 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_health_collect.js, enabled=true, tag=东东健康社区收集能量
 cron "10 0-23/4 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health.js, enabled=true, tag=东东健康社区
 cron "2 9 * * *" script-path=https://raw.githubusercontent.com/jonrean/JD-SHELL/main/monk_pasture.js, enabled=true, tag=有机牧场
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xyl.js, enabled=true, tag=新亚链
