--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/cgwz.js, enabled=true, tag=猜歌王者改进度
+cron "25 8 * 4-5 *" script-path=https://share.r2ray.com/dust/car/z_tcl_lining.js, enabled=true, tag=京东TCL电视自营
 cron "4 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_market_lottery.js, enabled=true, tag=京东幸运大转盘0301版
 cron "5-45/20 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health_collect.js, enabled=true, tag=京东健康社区收能量0301版
 cron "25 * * * *" script-path=https://share.r2ray.com/dust/i-chenzhe/z_health_energy.js, enabled=true, tag=京东健康社区收能量藏经阁版
