--- a/task/zhiyi.conf
+++ b/task/zhiyi.conf
@@ -1,37 +1,37 @@
 # Ease task
 # 你薅疼我了！
 
-cron " 5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wkzz.js, enabled=true, tag=微客众智
-cron " 0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, enabled=true, tag=番茄小说
+cron " 5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wkzz.js, img-url=https://ae01.alicdn.com/kf/Uff0a0bb9e66a479591c9b02c176fd276A.jpg, enabled=true, tag=微客众智
+cron " 0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, img-url=https://raw.githubusercontent.com/KodoShinichi/Head/main/fqxs.png, enabled=true, tag=番茄小说
 cron " 0 * * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/SHUQI/shuqi.js, enabled=false, tag=书旗
 cron " 0 * * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/SHUQI/shuqireadtime.js, enabled=false, tag=书旗时长
-cron "*/30 8-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/cfz.js, enabled=true, tag=春风转
-cron " 20 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xyzd.js, enabled=true, tag=幸运赚点
-cron " 15 13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/hldsp.js, enabled=true, tag=哈喽短视频
-cron " 50 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yggy.js, enabled=true, tag=阳光果园
+cron "*/30 8-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/cfz.js, img-url=https://ae01.alicdn.com/kf/U8a3a2572bf5d4584928d1d7cde52b50ba.jpg, enabled=true, tag=春风转
+cron " 20 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xyzd.js, img-url=https://ae01.alicdn.com/kf/U1680ecdfa17544669c71e00400c542e31.jpg, enabled=true, tag=幸运赚点
+cron " 15 13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/hldsp.js, img-url=https://ae01.alicdn.com/kf/Uda8ecbbe50444fe293b538cbccf9d719q.jpg, enabled=true, tag=哈喽短视频
+cron " 50 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yggy.js, img-url= https://ae01.alicdn.com/kf/Ubf3bd5e9c2414c18a96a3a2b20a9d2c5C.jpg, enabled=true, tag=阳光果园
 cron " 15 0,6,12,18, * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ddxq.js, enabled=false, tag=嘀嗒星球
-cron " 15 0,6,12,18, * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xsmm.js, enabled=true, tag=悬赏喵喵
-cron " 15 12,14,16,20,22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ysm.js, enabled=true, tag=云扫码
+cron " 15 0,6,12,18, * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xsmm.js, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/taskicon/Yunsaoma.png, enabled=true, tag=悬赏喵喵
+cron " 15 12,14,16,20,22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/ysm.js, img-url=https://s3.ax1x.com/2021/02/28/6CRWb8.jpg, enabled=true, tag=云扫码
 cron " 15 12,14,16,20 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/fqkk.js, enabled=true, tag=番茄看看
-cron " 1,30 10-20 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/ranlv.js, enabled=true, tag=燃旅视频
-cron " 15 10 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/mhdsp.js, enabled=true, tag=陌嗨短视频
-cron " 10 */1 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zmsp.js, enabled=true, tag=芝嫲视频
-cron "*/6 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/ZIYE/Task/iboxpay.js, enabled=true, tag=笑谱ziye版
+cron " 1,30 10-20 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/ranlv.js, img-url=https://raw.githubusercontent.com/Se7eNcBoT/MyXP/master/Icons/ZhiYi/ranlv_144x.png, enabled=true, tag=燃旅视频
+cron " 15 10 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/mhdsp.js, img-url= https://gitee.com/ydj0602/hym/raw/img/MHDSP.png, enabled=true, tag=陌嗨短视频
+cron " 10 */1 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zmsp.js, img-url= https://s3.ax1x.com/2021/02/06/yYzeWn.png, enabled=true, tag=芝嫲视频
+cron "*/6 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/ZIYE/Task/iboxpay.js, img-url=https://qxzy.top/rules/QuantumultX/img/xp.png, enabled=true, tag=笑谱ziye版
 cron "*/5 6-23 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/huoshan.js, enabled=true, tag=抖音火山版
-cron " 5,35 8-23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zy/jrtt.js, enabled=false, tag=今日头条极速版
-cron " 40 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zy/dyjsb.js, enabled=false, tag=抖音极速版
-cron " 0,30 * * * *" script-path=https://raw.githubusercontent.com/adwktt/adwktt/master/BBB.js, enabled=true, tag=步步宝,
-cron "*/20 0-23 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/CONGHUA/chonghua.js, enabled=true, tag=葱花视频
-cron " 30 7-23 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/baidu_speed.js, enabled=false, tag=百度极速版
-cron " 0 12,23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_ziye12_JavaScript/master/Task/flw.js, enabled=true, tag=新返利-0.8¥
-cron " 35 5 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js, enabled=true, tag=快手极速版
-cron " 00 16 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockqx.js, enabled=true, tag=腾讯自选股
-cron " 3,30 0 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockcow.js, enabled=true, tag=活动-长牛来了
-cron " 0 0 * * *" script-path=https://raw.githubusercontent.com/id77/QuantumultX/master/task/yiLi.js, enabled=true, tag=伊利乳品
+cron " 5,35 8-23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zy/jrtt.js, img-url=https://qxzy.top/rules/QuantumultX/img/jrtt.png, enabled=false, tag=今日头条极速版
+cron " 40 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zy/dyjsb.js, img-url=https://qxzy.top/rules/QuantumultX/img/dyjsb.png, enabled=false, tag=抖音极速版
+cron " 0,30 * * * *" script-path=https://raw.githubusercontent.com/adwktt/adwktt/master/BBB.js, img-url=https://qxzy.top/rules/QuantumultX/img/bbb.png, enabled=true, tag=步步宝,
+cron "*/20 0-23 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/CONGHUA/chonghua.js, img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/chonghua.png, enabled=true, tag=葱花视频
+cron " 30 7-23 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/baidu_speed.js, img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/baidu_speed.png, enabled=false, tag=百度极速版
+cron " 0 12,23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_ziye12_JavaScript/master/Task/flw.js, img-url=https://qxzy.top/rules/QuantumultX/img/fanli.png, enabled=true, tag=新返利-0.8¥
+cron " 35 5 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js, img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/kuaishou.png, enabled=true, tag=快手极速版
+cron " 00 16 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockqx.js, img-url=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txzxg.png, enabled=true, tag=腾讯自选股
+cron " 3,30 0 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockcow.js, img-url=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txzxg.png, enabled=true, tag=活动-长牛来了
+cron " 0 0 * * *" script-path=https://raw.githubusercontent.com/id77/QuantumultX/master/task/yiLi.js, img-url=https://raw.githubusercontent.com/id77/QuantumultX/master/icon/yiLi.png, enabled=true, tag=伊利乳品
 cron " 36 0 8,12,13,14,18,19,20,21,22,23 * * *" script-path=https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dxbox.js, enabled=true, tag=电信金豆
-cron " 20 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js, enabled=true, tag=人人视频
-cron " 20 9 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js, enabled=true, tag=爱奇艺
-cron " 10 9 * * *" script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/didichuxing/didi_checkin.js, enabled=true, tag=滴滴出行
-cron " 10 1-23 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/QuantumultX/master/Scripts/Youth/Youth_AutoRead.js, enabled=true, tag=中青阅读
-cron " 30 6 * * *" script-path=https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js, enabled=true, tag=中青看看赚
-cron "*/14 0-23 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, enabled=true, tag=中青看点极速版
+cron " 20 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js, img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/rrtv.png, enabled=true, tag=人人视频
+cron " 20 9 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js, img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/iQIYI.png, enabled=true, tag=爱奇艺
+cron " 10 9 * * *" script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/didichuxing/didi_checkin.js, img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/didi_checkin.png, enabled=true, tag=滴滴出行
+cron " 10 1-23 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/QuantumultX/master/Scripts/Youth/Youth_AutoRead.js, img-url=https://raw.githubusercontent.com/Orz-3/task/master/youth.png, enabled=true, tag=中青阅读
+cron " 30 6 * * *" script-path=https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js, img-url=https://raw.githubusercontent.com/Orz-3/task/master/youth.png, enabled=true, tag=中青看看赚
+cron "*/14 0-23 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/youth.js, img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/youth.png, enabled=true, tag=中青看点极速版
