--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "7 24,47 12 * * ?" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/tls.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=特仑苏小程序
 cron "10 16 * * *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jd_tcl.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=京东球队赢好礼（加购）
 cron "10 16 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_tcl.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=京东球队赢好礼（不加购）
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/cgwz.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=猜歌王者改进度
