--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -8,7 +8,7 @@ cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/mas
 cron "25 8 * 4-5 *" script-path=https://share.r2ray.com/dust/car/z_tcl_lining.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东TCL电视自营
 cron "4 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_market_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=幸运大转盘
 cron "5-45/20 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_health_collect.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=东东健康社区收集能量
-cron "10 0-23/4 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=东东健康社区
+cron "10 0-23/4 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_health.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=东东健康社区
 cron "2 9 * * *" script-path=https://raw.githubusercontent.com/jonrean/JD-SHELL/main/monk_pasture.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=有机牧场
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xyl.js, img-url=https://qxzy.top/rules/QuantumultX/img/xyl.png, enabled=true, tag=新亚链
 cron "0 13 9 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东排行榜
