--- a/task/lxk0301_LoonTask.conf
+++ b/task/lxk0301_LoonTask.conf
@@ -40,7 +40,7 @@ cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresou
 cron "10 0,20 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_necklace.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=点点券
 cron "35 1,23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_nzmh.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=女装盲盒
 cron "15 6-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pet.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdmc.png, enabled=true, tag=东东萌宠
-cron "12 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pigPet.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyz.png, enabled=true, tag=京东金融养猪猪
+cron "12 0-23/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pigPet.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyz.png, enabled=true, tag=京东金融养猪猪
 cron "1 7-21/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_plantBean.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdzd.png, enabled=true, tag=种豆得豆
 cron "0 2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_price.js, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png, enabled=true, tag=京东保价
 cron "1 1,2,23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_redPacket.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东全民开红包
