--- a/task/lxk0301_LoonTask.conf
+++ b/task/lxk0301_LoonTask.conf
@@ -22,7 +22,7 @@ cron "13 1,22 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdre
 cron "5-45/20 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health_collect.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=东东健康社区收集能量
 cron "10 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jdfactory.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_factory.png, enabled=true, tag=东东工厂
 cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jdzz.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdzz.png, enabled=true, tag=京东赚赚
-cron "10 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jin_tie.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=领金贴
+cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jin_tie.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=领金贴
 cron "15 0-23/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdcww.png, enabled=true, tag=京东宠汪汪
 cron "15 0-23/1 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_feedPets.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdcww.png, enabled=true, tag=京东宠汪汪喂食
 cron "0 0-16/8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_reward.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdcww.png, enabled=true, tag=宠汪汪积分兑换奖品
