--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/kxhy.js, img-url=https://raw.githubusercontent.com/Ariszy/Private-Script/master/img/kxhy.png, enabled=true, tag=开心花园
 cron "35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qhyd.js, img-url=https://ae01.alicdn.com/kf/U413ab7460abb4a28b11deac3c5034243N.jpg, enabled=true, tag=千禾阅读
 cron "10,20,30 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xfyjc.js, img-url=https://ae01.alicdn.com/kf/Ue110888eddad48a8a78d99284e599b134.jpg, enabled=true, tag=幸福养鸡场
 cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jin_tie.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东领金贴
