--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -47,7 +47,7 @@ cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/ma
 cron "0,30 8-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/hlyy.js, img-url=https://ae01.alicdn.com/kf/U49d941738c0c41569f7db55825943375f.jpg, enabled=true, tag=葫芦音乐
 cron "30 10 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yqzh.js, img-url=https://ae01.alicdn.com/kf/U428ddcb68e304bc0822743cad88f5142n.jpg, enabled=true, tag=悦趣阅读
 cron "10 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wcxcx.js, img-url=https://ae01.alicdn.com/kf/Ua6bd9417d492473f8ca0c3110b2176307.jpg, enabled=true, tag=文创阅读小程序
-cron "0 0-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_carnivalcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东手机狂欢城
+cron "0 0-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_carnivalcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️京东手机狂欢城
 cron "5 1 23-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_grassy.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️答题赢京豆
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=66阅读
 cron "12 0 19-24 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_city_cash.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️城城分现金
