--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/dogeda.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=DOGEDA
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=66阅读修复版
 cron "2 0 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/hhkk.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=火狐看看
 cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/kxhy.js, img-url=https://raw.githubusercontent.com/Ariszy/Private-Script/master/img/kxhy.png, enabled=true, tag=开心花园
