--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,11 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "10 0,8,11,17 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_fruit.js, img-url=https://qxzy.top/rules/QuantumultX/img/jddj.png, enabled=true, tag=京东到家果园任务
+cron "5 */2 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_fruit_collectWater.js, img-url=https://qxzy.top/rules/QuantumultX/img/jddj.png, enabled=true, tag=到家果园收水滴
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_bean.js, img-url=https://qxzy.top/rules/QuantumultX/img/jddj.png, enabled=true, tag=鲜豆任务
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_plantBeans.js, img-url=https://qxzy.top/rules/QuantumultX/img/jddj.png, enabled=true, tag=鲜豆庄园
+cron "*/5 * * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_getPoints.js, img-url=https://qxzy.top/rules/QuantumultX/img/jddj.png, enabled=true, tag=鲜豆庄园领水滴
 cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/kxhy.js, img-url=https://raw.githubusercontent.com/Ariszy/Private-Script/master/img/kxhy.png, enabled=true, tag=开心花园
 cron "10,20,30 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xfyjc.js, img-url=https://ae01.alicdn.com/kf/Ue110888eddad48a8a78d99284e599b134.jpg, enabled=true, tag=幸福养鸡场
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/hhkk.js, img-url=https://qxzy.top/rules/QuantumultX/img/hhkk.png, enabled=true, tag=火狐看看
