--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,7 +1,13 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
-cron "0 0/5 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/ningmeng/main/fhxz.js, enabled=true, 
+cron "0-25/5 0 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_getPoints.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jddj.png, enabled=true, tag=京东到家鲜豆庄园领水滴
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_plantBeans.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jddj.png, enabled=true, tag=京东到家鲜豆庄园
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_bean.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jddj.png, enabled=true, tag=京东到家鲜豆任务
+cron "5 */2 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_fruit_collectWater.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jddj.png, enabled=true, tag=京东到家果园收水滴
+cron "10 0,8,11,17 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_fruit.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jddj.png, enabled=true, tag=京东到家果园任务
+cron "10 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/skjh.js, img-url=https://ae01.alicdn.com/kf/Ue353b658a4424a1e873d0b66620d06a41.jpg, enabled=true, tag=食客江湖
+cron "*/10 * * * *" script-path=http://nm999.cn/fhxz.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ningmeng.png, enabled=true, tag=柠檬富豪小镇
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/dogeda.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=DOGEDA
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/66yd.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=66阅读修复版
 cron "2 0 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/hhkk.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/mona.png, enabled=true, tag=火狐看看
