--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,8 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tyg.js, img-url=https://ae01.alicdn.com/kf/Ud9336913fc5140ae886b06fccf9b90a3y.jpg, enabled=true, tag=淘优购
+cron "0 0 0/4 * * ?" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ggdh.js, img-url=https://qxzy.top/rules/QuantumultX/img/ggdh.png, enabled=true, tag=狗狗大亨
 cron "*/5 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/ningmeng/main/fhxz.js, img-url=https://qxzy.top/rules/QuantumultX/img/fhxz.png, enabled=true, tag=富豪小镇
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/skjh.js, img-url=https://ae01.alicdn.com/kf/Ue353b658a4424a1e873d0b66620d06a41.jpg, enabled=true, tag=食客江湖
 cron "10 0,8,11,17 * * *" script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_fruit.js, img-url=https://qxzy.top/rules/QuantumultX/img/jddj.png, enabled=true, tag=京东到家果园任务
@@ -35,7 +37,7 @@ cron "35 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zz
 cron "7 7 7-20 * * *" script-path=https://raw.githubusercontent.com/ziye888/JavaScript/main/Task/yqnb.js, img-url=https://raw.githubusercontent.com/ziye888/JavaScript/main/Task/yqnb.png, enabled=true, tag=易趣牛帮
 cron "35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qhyd.js, img-url=https://ae01.alicdn.com/kf/U413ab7460abb4a28b11deac3c5034243N.jpg, enabled=true, tag=千禾阅读
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/blnc.js, img-url=https://ae01.alicdn.com/kf/U7bcabce8ea7644f18e3c84f65907e34bf.jpg, enabled=true, tag=部落农场
-cron "0 0,1-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mohe.js, img-url=https://qxzy.top/rules/QuantumultX/img/sgmh.png, enabled=true, tag=5G超级盲盒
+cron "0 0,1-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mohe.js, img-url=https://qxzy.top/rules/QuantumultX/img/sgmh.png, enabled=true, tag=⚠️5G超级盲盒
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/age174/-/main/mmdzz.js, img-url=https://ae01.alicdn.com/kf/U13a7be18e87942118e4402e22652fd70H.jpg, enabled=true, tag=萌喵大作战无限刷
 cron "*/4 * * * *" script-path=https://raw.githubusercontent.com/qqsdff/script/main/xsyx.js, img-url=https://qxzy.top/rules/QuantumultX/img/xsyx.png, enabled=true, tag=兴盛优选小程序
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/LJJJia/script/master/iklear/iklear_checkin.js, img-url=https://qxzy.top/rules/QuantumultX/img/iklear.png, enabled=true, tag=iklear签到
