--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/yt.js, img-url=https://qxzy.top/rules/QuantumultX/img/yt.png, enabled=true, tag=炎兔
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tyg.js, img-url=https://ae01.alicdn.com/kf/Ud9336913fc5140ae886b06fccf9b90a3y.jpg, enabled=true, tag=淘优购
 cron "0 0 0/4 * * ?" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ggdh.js, img-url=https://qxzy.top/rules/QuantumultX/img/ggdh.png, enabled=true, tag=狗狗大亨
 cron "*/5 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/ningmeng/main/fhxz.js, img-url=https://qxzy.top/rules/QuantumultX/img/fhxz.png, enabled=true, tag=富豪小镇
