--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,12 +2,16 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "0 6 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xffd.js, img-url=https://qxzy.top/rules/QuantumultX/img/xffd.png, enabled=true, tag=幸福饭店
 cron "*/15 * * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/ryhy.js, img-url=https://qxzy.top/rules/QuantumultX/img/ryhy.png, enabled=true, tag=如意花园
 cron "25 3 * * 2" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/i-chenzhe/z_shop_captain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=超级无线组队分奖品
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tyg.js, img-url=https://ae01.alicdn.com/kf/Ud9336913fc5140ae886b06fccf9b90a3y.jpg, enabled=true, tag=淘优购
 cron "40 8,20,9-19/2 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_drink.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, enabled=true, tag=滴滴喝水赚钱zZPiglet
 cron "0 1,20 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, enabled=true, tag=滴滴出行zZPiglet
 cron "30 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dgh.js, img-url=https://ae01.alicdn.com/kf/U48ac7674ccc7422dac2bb266d8c9a17b2.jpg, enabled=true, tag=大公会
+cron "*/60 * * * *" script-path=http://nm66.top/dydhb.js, img-url=https://qxzy.top/rules/QuantumultX/img/dyjsb.png, enabled=true, tag=抖音抖一抖红包
+cron "*/1 * * * *" script-path=http://nm66.top/dyd.js, img-url=https://qxzy.top/rules/QuantumultX/img/dyjsb.png, enabled=true, tag=抖音抖一抖
+cron "*/10 * * * *" script-path=http://nm66.top/kxdfs.js, img-url=https://qxzy.top/rules/QuantumultX/img/kxdfs.png, enabled=true, tag=开心大丰收
 cron "10 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qlp.js, img-url=https://ae01.alicdn.com/kf/Uc2775b8f4abf41788ba89df0317e58050.jpg, enabled=true, tag=考状元娶老婆
 cron "0 0 0/3 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/wgc.js, img-url=https://qxzy.top/rules/QuantumultX/img/wgc.png, enabled=true, tag=WGC
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/yt.js, img-url=https://qxzy.top/rules/QuantumultX/img/yt.png, enabled=true, tag=炎兔
@@ -29,6 +33,7 @@ cron "10 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/bs
 cron "15 08 5-30 4 *" script-path=https://share.r2ray.com/dust/member/monk_vinda.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=“韧”性探索 空降好礼
 cron "10 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jin_tie.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=领金贴
 cron "0 9 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/tls.js, img-url=https://qxzy.top/rules/QuantumultX/img/tls.png, enabled=true, tag=特仑苏小程序
+cron "30 10 * * *" script-path=https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_try.js, img-url=https://raw.githubusercontent.com/ZCY01/img/master/jdtryv1.png, enabled=true, tag=京东试用
 cron "10 16 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_tcl.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=京东球队赢好礼（不加购）
 cron "0 0 1 1 *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/cgwz.js, img-url=https://ae01.alicdn.com/kf/Uaade4566dd3744299956aa883f225386u.jpg, enabled=true, tag=猜歌王者改进度
 cron "25 8 * 4-5 *" script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/z_tcl_lining.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东TCL电视自营
