--- a/rule/ssr_ml.conf
+++ b/rule/ssr_ml.conf
@@ -158,7 +158,7 @@ BiliBili_我的页面处理 = type=http-response,script-path=https://raw.githubu
 
 
 # picsew专业版
-picsew专业版 = type=http-request,script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/picsew.js,pattern=https:\/\/buy\.itunes\.apple\.com\/verifyReceipt,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
+picsew专业版 = type=http-response,script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/picsew.js,pattern=https:\/\/buy\.itunes\.apple\.com\/verifyReceipt,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
 
 
 BoxJs = type=http-request,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/chavy.boxjs.js,pattern=^https?://boxjs.com,max-size=524288,requires-body=true,timeout=600,script-update-interval=43200,enable=true
