--- a/task/chenzhe.conf
+++ b/task/chenzhe.conf
@@ -5,6 +5,8 @@ cron "0 0,1-22/2 1-31 4-7 *" script-path=https://raw.githubusercontent.com/pxyle
 cron "10 10 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/i-chenzhe/z_xmf.js, tag=京东小魔方
 
 cron "15 8 9-13 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_ETIP.js, tag=探秘无限星空
+cron "25 8,12 6-11 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_oppo.js, tag=刺客567之寻宝
+
 
 # cron "0 0-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_carnivalcity.js, enabled=false, tag=京东手机狂欢城
 # cron "3 10 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/workflow/chenzhe/jd_fanslove.js, enabled=false, tag=粉丝互动
