--- a/task/chenzhe.conf
+++ b/task/chenzhe.conf
@@ -5,6 +5,7 @@ cron "0 0,1-22/2 1-31 4-7 *" script-path=https://raw.githubusercontent.com/pxyle
 cron "10 10 * * *" script-path=https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/i-chenzhe/z_xmf.js, tag=京东小魔方
 
 cron "15 8 9-13 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_ETIP.js, tag=探秘无限星空
+cron "15 8 7-31 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/car/adolf_haier.js, tag=海尔_欢乐大逃亡
 cron "25 8,12 6-11 5 *" script-path=https://raw.githubusercontent.com/monk-coder/dust/dust/normal/adolf_oppo.js, tag=刺客567之寻宝
 
 
