--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -99,7 +99,7 @@ cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/mai
 cron "0 9 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zhiyi/ygkc.js, img-url=https://qxzy.top/rules/QuantumultX/img/ygkc.png, enabled=true, tag=阳光矿场
 cron "12 12 24-26 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_sister.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️乘风破浪的姐姐
 cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_oneplus.js, img-url=https://qxzy.top/rules/QuantumultX/img/sgmh.png, enabled=true, tag=⚠️一加盲盒
-cron "5 8,14,20 17-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mother_jump.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_jump-jump.png, enabled=true, tag=⚠️母婴-跳一跳
+cron "5 814,20 11-17 5 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mother_jump.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_jump-jump.png, enabled=true, tag=母婴跳一跳
 cron "12 15 15-29 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_lenovo.js, img-url=https://qxzy.top/rules/QuantumultX/img/z_lenovo.png, enabled=true, tag=⚠️联想集卡活动
 cron "0 0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_xtg.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_xtg.png, enabled=true, tag=手机尚学季
 cron "0,1,2 0 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_exchange.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=领现金兑换红包
