--- a/rule/ssr_ml.conf
+++ b/rule/ssr_ml.conf
@@ -52,6 +52,11 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 DOMAIN-KEYWORD,apple,免流
 # 向日葵只能走直连 否则会断网卡主
 DOMAIN-KEYWORD,oray,DIRECT
+
+# 抖音
+DOMAIN-SUFFIX, ibytedtos.com, REJECT
+DOMAIN-SUFFIX, ipstatp.com, REJECT
+
 GEOIP,CN,免流
 FINAL,PROXY
 
