--- a/rule/ssr.conf
+++ b/rule/ssr.conf
@@ -51,6 +51,11 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 DOMAIN-KEYWORD,apple,DIRECT
 # 向日葵只能走直连 否则会断网卡主
 DOMAIN-KEYWORD,oray,DIRECT
+
+# 抖音
+DOMAIN-SUFFIX, ibytedtos.com, REJECT
+DOMAIN-SUFFIX, ipstatp.com, REJECT
+
 GEOIP,CN,DIRECT
 FINAL,PROXY
 
