--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -42,6 +42,9 @@ cron "10 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main
 cron "40 * * * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/wgc.js, img-url=https://qxzy.top/rules/QuantumultX/img/wgc.png, enabled=true, tag=WGC
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/yt.js, img-url=https://qxzy.top/rules/QuantumultX/img/yt.png, enabled=true, tag=炎兔
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tyg.js, img-url=https://ae01.alicdn.com/kf/Ud9336913fc5140ae886b06fccf9b90a3y.jpg, enabled=true, tag=淘优购
+cron "5 * * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/wechatsubs/gxrcw.js, img-url=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/picture/gxrcw.png, enabled=true, tag=高校人才网招聘监控
+cron "5 * * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/wechatsubs/sydwzp.js, img-url=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/picture/sydw.png, enabled=true, tag=事业单位招聘监控
+cron "0 30 21 * * 2,4,7 " script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/ssq/ssq.js, img-url=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/picture/ssq.png, enabled=true, tag=双色球
 cron "0 0 0/4 * * ?" script-path=https://raw.githubusercontent.com/xl2101200/-/main/ggdh.js, img-url=https://qxzy.top/rules/QuantumultX/img/ggdh.png, enabled=true, tag=狗狗大亨
 cron "*/5 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/ningmeng/main/fhxz.js, img-url=https://qxzy.top/rules/QuantumultX/img/fhxz.png, enabled=true, tag=富豪小镇
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/skjh.js, img-url=https://ae01.alicdn.com/kf/Ue353b658a4424a1e873d0b66620d06a41.jpg, enabled=true, tag=食客江湖
